--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3358884
+	base = a425197
 	trimbase = 
 	parent = debian/jade/robot_web_tools
-	previous = 
+	previous = 3358884
