--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4fc1ee6
+	base = 2253551
 	trimbase = 
 	parent = release/jade/robot_web_tools
-	previous = 
+	previous = 4fc1ee6
