--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = cbbb114
+	base = 6dd1f52
 	trimbase = 
 	parent = rpm/jade/robot_web_tools
-	previous = 
+	previous = cbbb114
